recipes/public_routes.tf
################################
# Route Rules to Access Internet
################################

#IPv4
resource "aws_route" "public_internet_gateway" {
  count =  length(var.public_subnets) > 0 ? 1 : 0

  route_table_id         = aws_route_table.public[0].id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw[0].id

  timeouts {
    create = "5m"
  }
}

#IPv6
resource "aws_route" "public_internet_gateway_ipv6" {
  count =  length(var.public_subnets) > 0 ? 1 : 0

  route_table_id              = aws_route_table.public[0].id
  destination_ipv6_cidr_block = "::/0"
  gateway_id                  = aws_internet_gateway.igw[0].id
}
